# mcvrp_blossom

./: .gitignore  CMakeLists.txt
data/test_data/: k4.json  k5_uniform.json  k6_high_variation.json  k6_varied.json  k8_medium.json  test_1.json
src/: main.cpp
src/experiments/: scenario1.cpp  scenario3.cpp  test_runner.cpp  test_runner.h
src/graph/: graph.cpp  graph.h
src/parser/: json_parser.cpp  json_parser.h
src/solver/: solver.cpp  solver.h
src/utils/: edge_filters.cpp  edge_filters.h  types.h
